added duty cycle to report

--- a/imbh/tests/pe_test/summary_report.html
+++ b/imbh/tests/pe_test/summary_report.html
@@ -85,6 +85,18 @@
                         height="50%"
                         src="pp.png"
                     ></img>
+                    <p>P-P test for q is inaccurate as prior provided for PE is 1/q</p>
+                </div>
+
+
+                <div class="row">
+                    <!--CONTENT-->
+                    <h1>Duty Cycle</h1>
+                    <img
+                        width="50%"
+                        height="50%"
+                        src="hyper_pe/DutyCycle_corner.png"
+                    ></img>
                     <p></p>
                 </div>
 
