--- a/imbh/tests/pe_test/summary_report.html
+++ b/imbh/tests/pe_test/summary_report.html
@@ -76,7 +76,7 @@
                         src="summary_table.html"
                         align="middle"
                     ></iframe>
-                    <p>Click on the Injection Numbers to go to the corresponding corner plot.</p>
+                    <p>1 injections. Click on the Injection Numbers to go to the corresponding corner plot.</p>
                 </div>
 
 
@@ -99,13 +99,16 @@
                 <div class="row">
                     <!--CONTENT-->
                     <h1>P-P test</h1>
-                    <img
-                        <!--width="50%"-->
+                    <iframe
+                        width="50%"
                         height="50%"
-                        src="pp.png"
+                        frameborder="0"
+                        seamless="seamless"
+                        scrolling="no"
+                        src="pp.html"
                         align="middle"
-                    ></img>
-                    <p>P-P test for q is inaccurate as prior provided for PE is 1/q</p>
+                    ></iframe>
+                    <p></p>
                 </div>
 
 
@@ -113,7 +116,6 @@
                     <!--CONTENT-->
                     <h1>Duty Cycle</h1>
                     <img
-                        <!--width="50%"-->
                         height="50%"
                         src="hyper_pe/DutyCycle_corner.png"
                         align="middle"
@@ -124,14 +126,25 @@
 
                 <div class="row">
                     <!--CONTENT-->
-                    <h1>Mass Distribution</h1>
+                    <h1>Mass Distribution: Normal distribution</h1>
                     <img
-                        <!--width="50%"-->
                         height="50%"
-                        src="hyper_pe/QMC_corner.png"
+                        src="hyper_pe/normalMassDistribution_corner.png"
                         align="middle"
                     ></img>
                     <p></p>
+                </div>
+
+
+                <div class="row">
+                    <!--CONTENT-->
+                    <h1>Mass Distribution: Uniform distribution</h1>
+                    <img
+                        height="50%"
+                        src="hyper_pe/uniformMassDistribution_corner.png"
+                        align="middle"
+                    ></img>
+                    <p>Log BF (uniform - normal): 0.0</p>
                 </div>
 
                 </div>
